init + meetings notes

--- a/documentation/meeting-notes/2024-04-11.md
+++ b/documentation/meeting-notes/2024-04-11.md
@@ -4,9 +4,8 @@
     * primary focus will be to create a testing environment that can be tested using the agile approach
 * the SalesForce Project Management Module will be used to create custom application logic (will be developed in Java to some extent)
 * at the moment there are no development tasks
-* more test engineers will be required who can join in 6-8 weeks
+* Lucian will provide SalesForce learning resources that are needed by Paula and Theresa
 * Lucian and Cem need more information, e.g. for mentor and mentee models which Thomas will provide
     * Thomas will provide models that are needed for Lucian and Cem
-* Lucian will send SalesForce learning resources that are needed by Paula and Theresa
 * Miyase is no longer part of the team
-
+* more test engineers will be required who can join in 6-8 weeks
